--- a/src/composer.json
+++ b/src/composer.json
@@ -11,8 +11,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7",
-        "spatie/laravel-query-builder": "^5.2"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
