--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0",
         "fruitcake/laravel-cors": "^2.0.5",
+        "google/cloud-secret-manager": "^1.12",
         "google/cloud-storage": "^1.31",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
